# LearningTracker

./: .env.example  .gitignore  Makefile  PLAN.md  README.md
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/migrations/: 001_initial_schema.sql  002_episode_topic.sql  003_episode_topic_backfill.sql  004_episode_trashed.sql  005_podcast_topic_nullable.sql  006_episode_podcast_nullable.sql  007_episode_topics_many_to_many.sql
backend/app/models/: __init__.py  episode.py  podcast.py  qa.py  topic.py
backend/app/routers/: episodes.py  podcasts.py  qa.py  tasks.py  topics.py
backend/app/schemas/: analysis.py  episode.py  podcast.py  qa.py  topic.py  transcript.py
backend/app/services/: analyzer.py  audio_downloader.py  feed_parser.py  qa_service.py  transcriber.py
backend/app/tasks/: analysis_tasks.py  download_tasks.py  executor.py  huey_app.py  transcription_tasks.py
backend/tests/: conftest.py  test_audio_downloader.py  test_feed_parser.py  test_transcriber.py
backend/tests/test_routers/: test_topics.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: episodes.ts  podcasts.ts  qa.ts  topics.ts
frontend/src/components/: AddEpisodeModal.tsx  AddPodcastModal.tsx  AudioPlayer.tsx  ChatBar.tsx  InsightsTimeline.tsx  StatusBadge.tsx  TopicPicker.tsx
frontend/src/pages/: AddPodcast.tsx  AllEpisodes.tsx  AllTopics.tsx  ChatDetail.tsx  Chats.tsx  Dashboard.tsx  EpisodeDetail.tsx  NewEpisodes.tsx  (+3 more)
specs/002-remove-no-needs/: spec.md
(+3 files in other folders)
