[project]
name = "podcast-learning-companion"
version = "0.1.0"
description = "A podcast learning companion with AI-powered summaries, Q&A, and quizzes"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "feedparser>=6.0.0",
    "httpx>=0.27.0",
    "huey>=2.5.0",
    "python-dotenv>=1.0.0",
    "assemblyai>=0.37.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]
transcription = [
    "faster-whisper>=1.0.0",
]
all = [
    "podcast-learning-companion[transcription]",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
